my useful message

--- a/flex-model.html
+++ b/flex-model.html
@@ -6,6 +6,7 @@
   <title>flex-model</title>
 </head>
 <header>
+ <body>
 <div class="ovner-block flex-container1">
   <div class="inner-block flex-child">
     <h1>Welcome to Acme Web Solutions</h1>
@@ -77,6 +78,6 @@
 <footer class="main-footer">
   <div class="footer1">Acme Web Solutions</div>
   <div class="footer2">Project By <a href="http://traversymedia.com" target="_blank">Traversy Media</a></div>
-</footer>  
-</body>
+</footer> 
+ </body>
 </html>
